k8s/grpc-tests.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-tests
  name: grpc-tests
  namespace: default
spec:
  ports:
    - name: grpc
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: grpc-tests
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-tests
  name: grpc-tests
  namespace: default
spec:
  selector:
    matchLabels:
      app: grpc-tests
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-tests
    spec:
      serviceAccountName: grpc-tests
      containers:
        - image: docker.io/cmwylie19/grpc-tests:latest
          name: grpc-tests
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
